# aura

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.aura-cache/: manifest.json
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  codex-pr-review.yml  release.yml
benchmarks/: run.rs
crates/aura-agent/: Cargo.toml
crates/aura-agent/src/: lib.rs  protocol.rs  server.rs
crates/aura-backend-compose/src/: codegen.rs  lib.rs
crates/aura-backend-swift/src/: codegen.rs  lib.rs
crates/aura-backend-tui/: Cargo.toml
crates/aura-backend-tui/src/: codegen.rs  eval.rs  lib.rs  render.rs  runtime.rs  value.rs
crates/aura-backend-web/src/: codegen.rs  lib.rs
crates/aura-backend-win/src/: codegen.rs  lib.rs
crates/aura-benchmark/: Cargo.toml
crates/aura-cli/: Cargo.toml
crates/aura-cli/src/: main.rs
crates/aura-core/: Cargo.toml
crates/aura-core/src/: cache.rs  config.rs  declarations.rs  diff.rs  explain.rs  fmt.rs  lib.rs  project.rs  sketch.rs  sourcemap.rs  treeshake.rs
crates/aura-core/tests/: conformance.rs  error_snapshots.rs  multifile.rs  parse_examples.rs  (+1 more)
crates/aura-lsp/: Cargo.toml
crates/aura-pkg/: Cargo.toml
docs/: README.md  agent-api.md  aura-vs-typescript.md  building-targets.md  engineer-1-task-sheet.md  engineer-2-task-sheet.md  getting-started.md
editors/vscode/: .vscodeignore  README.md  extension.js  language-configuration.json  package.json
examples/: chat.aura  ecommerce.aura  launchpad.aura  todo.aura  weather.aura
npm-package/: README.md  index.js
showcase/: taskflow-v2.aura  taskflow.aura
(+58 files in other folders)
